@@ -1,0 +1,9 @@
+{
+  "actions": {},
+  "copyright": "See CK COPYRIGHT.txt for copyright details",
+  "desc": "MLPerf result abstraction",
+  "developer": "Grigori Fursin",
+  "developer_email": "Grigori.Fursin@cTuning.org",
+  "developer_webpage": "http://fursin.net",
+  "license": "See CK LICENSE.txt for licensing details"
+}
