@@ -1,0 +1,32 @@
+#
+# Collective Knowledge (MLPerf result abstraction)
+#
+# See CK LICENSE.txt for licensing details
+# See CK COPYRIGHT.txt for copyright details
+##
+# Developer: Grigori Fursin, Grigori.Fursin@cTuning.org, http://fursin.net
+#
+
+cfg = {}  # Will be updated by CK (meta description of this module)
+work = {}  # Will be updated by CK (temporal data)
+ck = None  # Will be updated by CK (initialized CK kernel)
+
+# Local settings
+
+##############################################################################
+# Initialize module
+
+
+def init(i):
+    """
+
+    Input:  {}
+
+    Output: {
+              return       - return code =  0, if successful
+                                         >  0, if error
+              (error)      - error text if return > 0
+            }
+
+    """
+    return {'return': 0}
